replaces login menu with avatar, adds profile link, fixes title alignment, uses lazy image loading

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,16 +1,12 @@
 // Variables
 @import "variables";
 
-// Bulma
-// @import '~bulma/bulma';
-// @import '~buefy/src/scss/buefy';
-
 .navbar-brand {
   font-family: 'Pacifico', cursive;
   position: absolute;
   left: 50%;
   margin-left: -63px;
-  height: 100%;
+  // height: 100%;
   display: flex;
   align-items: center;
 }
